Fix vertical overflow

--- a/css/edgecreator_wizard.css
+++ b/css/edgecreator_wizard.css
@@ -139,12 +139,11 @@ body>.ui-dialog {
 	justify-content: space-between;
 	padding-top: 80px;
 	width: 100%;
-	height: 100%;
 	box-sizing: border-box;
 }
 
 #current-steps {
-	overflow: auto;
+	overflow-x: auto;
 	padding: 0 20px;
 }
 
